--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
     "java.project.sourcePaths": [
+        "Tema07",
         "Tema06",
         "Tema05",
-        "Tema07"
+        "Tema07_Bidimensional"
     ]
 }
