--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,8 @@
 {
     "java.project.sourcePaths": [
-        "Tema07",
+        "Tema07_Bidimensional",
         "Tema06",
         "Tema05",
-        "Tema07_Bidimensional"
+        "Tema04"
     ]
 }
